[tool.poetry]
name = "catqcbot"
version = "0.1.0"
description = "BookOps cataloging quality control bot"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
license = "MIT"
exclude = ["catqcbot/temp.py", "catqcbot/temp/*"]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "MARC"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
mypy = "^0.790"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
